# pc-automation-tools

./: .claudeignore  .env.cpu-optimized  .env.docker  .env.example  .env.taskmaster.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  AUTO_SUBMIT_README.md  CLAUDE.md  CLAUDE_CAPABILITIES.md  CLAUDE_GITHUB_ACTION.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_CAPABILITIES_ANALYSIS.md  CURRENT_STATUS.md  DEEP_RESEARCH_FINDINGS.md  GITHUB_COMMITMENT.md  ISSUE_TRACKING_DASHBOARD.md  LICENSE  MASTER_LAUNCHER.bat  MEMORY_SOLUTION_IMPLEMENTED.md  Makefile  PROBLEM_SOLVED_DOCUMENTATION.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_ENHANCED.md  ROOT_CAUSE_ANALYSIS.md  SCRIPT_IMPROVEMENTS.md  SECURITY_CHECKLIST.md  aider.conf.yml  audit_report_generator.py  auto_submit.py  auto_submit.sh  autogen_config.json  backup.sh  benchmark.py  chain_models.py  (+63 more)
.claude/: settings.json
.claude/commands/: alpha-cleanup.md  deploy-ready.md  validate-alpha.md
.github/: COPILOT_AGENT_GUIDE.md  PULL_REQUEST_TEMPLATE.md  claude-tasks.md  copilot-instructions.md  copilot.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  claude-auto-fix.yml  claude-code-alpha.yml  claude-docs-sync.yml  codeql.yml  (+5 more)
Desktop-MCP-Integration/: README.md  README_AUTONOMOUS.md  README_ENHANCED.md  README_SWARM_INTELLIGENCE.md  TRANSFORMATION_COMPLETE.md  ai_platform_mcp.py  autonomous_safety_config.json  package-lock.json  package.json  perplexity_mcp.js  prompts_config.json  requirements.txt  setup_mcp.bat  verify_setup.py
agency_swarm_config/: swarm_intelligence_report_20250904_012901.json
apps/: code_pipeline.sh  rag_chatbot.json
azure-config/: azure-setup.sh
azure-deploy/: Dockerfile.queen  Dockerfile.worker  build-and-push.sh  docker-compose.yml
config/: llmstack.yaml
configs/: chromadb_config.json  crawl4ai_config.json  ollama_config.json  scrapegraph_config.json  system_summary.json
docs/: AIDER_SETUP_GUIDE.md  AI_AGENT_HEALTH_MONITORING.md  API_INTEGRATION_GUIDE.md  AUTOGEN_SETUP_GUIDE.md  AZURE_SWARM_DEPLOYMENT.md  CAMEL_AI_SETUP_GUIDE.md  CAPABILITY_AUDIT_RESULTS.md  CLAUDE.md  CONTINUE_VSCODE_SETUP_GUIDE.md  CONTRIBUTING.md  COORDINATION_DEPLOYMENT_GUIDE.md  COPILOT_AGENTS_GUIDE.md  COPILOT_TROUBLESHOOTING.md  Claude_Code_Integration_Comprehensive_Guide.docx  Claude_Code_Settings_Complete_Configuration_Guide.md  DEPLOYMENT_GUIDE.md  DolphinSecurityAssistant.spec  FINAL_RESEARCH_SUMMARY.md  HEALTH_MONITORING.md  JAN_DESKTOP_SETUP_GUIDE.md  LM_STUDIO_SETUP_GUIDE.md  MEMGPT_SETUP_GUIDE.md  MONITORING_SETUP_GUIDE.md  OPTIMIZATION_COMPLETE.md  PARALLEL_SWARM_DEPLOYMENT_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_OPTIMIZATION.md  START_DOLPHIN.bat  TERMINAL_SYNCHRONIZATION_GUIDE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_GUIDE.md  ULTIMATE_SECURITY_DEPLOYMENT_REPORT.md  VLLM_DEPLOYMENT_GUIDE.md  admin_swarm_report.txt  anaconda_agentic_ai_integration_report.txt  api_scan_demo_20250905_221829.json  api_scan_demo_20250905_221853.json  bayesian_intelligence_results.json  capability_audit_report_20250905_170153.json  (+33 more)
issue_tracking/: README.md  all_issues.json  issue_groups.yaml  progress_log.json  progress_report.md  summary_report.md
llmstack/: CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_LOG.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  FLOWISE_AGENT_SETUP.md  FLOWISE_QUICKSTART.md  MASTER_CONTROL.bat  OPENHANDS_QUICK_START.md  OPENHANDS_SETUP_GUIDE.md  README.md  START_AI_SYSTEM.bat  TEST_OLLAMA.py  ai_frameworks_integration.py  auto_login.py  chat_demo.py  claude_integration_guide.txt  connection_status.json  copilot_agent_integration.py  deploy.ps1  deploy.sh  docker-compose.llmstack.yml  extract_docx.py  flowise_agent_flow.json  health_check.py  llmstack_orchestrator.py  localai_config.yaml  main.py  orchestrator.py  requirements.txt  run.py  setup_flowise.bat  setup_localai.bat  setup_openhands.bat  test_flowise.py  test_installations.py  unified_orchestrator.py  verify_connections.py
mcp_config/: connections.json  mcp_report_20250904_010148.json
scripts/: benchmark.sh  benchmark_system.py  check_system.sh  configure_providers.py  deploy_llmstack.sh  diagnose_copilot_review.py  health_check.py  install_agents.sh  install_continue.sh  install_jan.sh  install_lm_studio.sh  install_ollama.sh  manage_services.sh  optimize_system.sh  orchestrator.py  run_swarm_standalone.py  setup_copilot_agents.sh  setup_monitoring.sh  setup_vllm.sh  swarm_demo.py  test_copilot_fix.py  test_swarm.py  troubleshoot.sh  validate_copilot_config.py  validate_deployment.sh
src/: __init__.py
todo-app/: README.md  index.html  script.js  styles.css
(+160 files in other folders)
